# hackathonplus_a11y

./: README.md  docker-compose.yml
.envs/: general
app/: App.js  api.js  app.json  package-lock.json  package.json
backend/: pyproject.toml  setup.cfg
backend/apps/: application.py  commands.py
backend/apps/auth/: hooks.py  schemas.py  views.py
backend/apps/common/: blueprints.py  consumers.py  exceptions.py  models.py  views.py
backend/apps/common/extensions/: socketio.py
backend/apps/task_app/: extensions.py  tasks.py
backend/apps/users/: __init__.py  consumers.py  models.py  routing.py  schemas.py  views.py
backend/config/: celery_worker.py
backend/config/settings/: base.py  local.py  test.py
backend/tests/apps/auth/: test_views.py
backend/tests/apps/users/: test_views.py
docker/local/backend/: Dockerfile
simple_backend/: api.php
visualisation/: distance.py  plots.py  speed.py
