[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Łukasz Skarżyński <skarzynski_lukasz@protonmail.com>"]

[tool.poetry.dependencies]
celery = "^4.3"
flask = "^1.1"
flask-migrate = "^2.5"
flask-sqlalchemy = "^2.4"
python = "^3.7"
sqlalchemy = "^1.3"
django-environ = "^0.4.5"
sqlalchemy-utils = "^0.34.2"
psycopg2-binary = "^2.8"
redis = "^3.3"
flower = "^0.9.3"
passlib = "^1.7"
bcrypt = "^3.1"
flask-jwt-extended = "^3.23"
flask-marshmallow = "^0.10.1"
marshmallow-sqlalchemy = "^0.19.0"
marshmallow = "^3.2"
flask-socketio = "^4.2"
eventlet = "^0.25.1"

[tool.poetry.dev-dependencies]
ipython = "^7.8"
isort = "^4.3"
pylama = "^7.7"
pylama-pylint = "^3.1"
pylint-celery = "^0.3.0"
yamllint = "^1.17"
dotenv-linter = "^0.1.4"
flask-shell-ipython = "^0.4.1"
factory_boy = "^2.12"
pytest = "^5.1"
pytest-factoryboy = "^2.0"
